--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -1,5 +1,5 @@
 .center{
-    text-align:center
+    text-align:center;
 }
 #title{
     text-align:center;
@@ -18,4 +18,33 @@
 .center a{
     text-align:center;
     padding:20px;
+}
+#div1{
+    height:800px;
+    max-height:1600px;
+}
+#editor-width{
+    width:1100px;
+    margin:0 auto;
+}
+input[type="text"]{
+    box-sizing: border-box;
+    text-align:center;
+    font-size:1.4em;
+    height:2em;
+    border-radius:4px;
+    border:1px solid #c8cccf;
+    color: #0f0f0f;
+    -moz-appearance: none;
+    display:block;
+    outline:0;
+    padding:0 1em;
+    text-decoration:none;
+    width:30%;
+}
+input[type="text"]:focus{
+    border:1px solid #ff7496;
+}
+.div-item{
+    padding: 10px;
 }
