--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -13,7 +13,7 @@ body {
     font-weight: 400;
     font-size: 17px;
     line-height: 19px;
-    padding: 0;
+    padding-bottom: 40px;
     margin: 0;
 }
 
